DOCS-135 [DOCS] Fix the colour of the search results in dark mode
Update design.css

--- a/docs/css/design.css
+++ b/docs/css/design.css
@@ -1,4 +1,3 @@
-
 /*
 * Prefixed by https://autoprefixer.github.io
 * PostCSS: v8.4.14,
@@ -87,6 +86,7 @@
 
     /* Defaults */
     --md-default-bg-color: var(--white);
+    --md-default-fg-color: var(--stone900);
     --md-default-fg-color--light: rgba(44,50,62,0.72);
     --md-default-fg-color--lighter: rgba(44,50,62,0.40);
     --md-default-fg-color--lightest: rgba(44,50,62,0.25);
@@ -120,6 +120,7 @@
 
     /* Defaults */
     --md-default-bg-color: var(--stone900);
+    --md-default-fg-color: var(--white);
     --md-default-fg-color--light: rgba(251,251,251,0.72);
     --md-default-fg-color--lighter: rgba(251,251,251,0.4);
     --md-default-fg-color--lightest: rgba(209,213,222,0.25);
@@ -163,7 +164,7 @@
 .md-typeset h1 {
     margin: 0 0 0.75em;
 }
-.md-header {
+.md-header :not(.md-search__suggest) {
     font-family: var(--fHeading);
     font-weight: bold;
 }
@@ -216,12 +217,20 @@
 .md-tabs__link {
     margin-top: 0.55rem;
 }
-.md-header__topic {
-    transition: opacity .25s;
+/* .md-header__topic .md-ellipsis {
+    position: relative;
 }
-.md-header__topic:hover {
-    opacity: 0.7;
-}
+.md-header__topic:hover .md-ellipsis::after {
+    content: "";
+    position: absolute;
+    display: block;
+    right: 0;
+    bottom: 11px;
+    left: 0;
+    width: 100%;
+    height: 2.5px;
+    background-color: currentColor;
+} */
 
 /* Footer */
 
@@ -635,6 +644,75 @@ i[warning] [class*="moji"] {
     margin-right: 0.125em;
     fill: currentColor;
     vertical-align: -0.3125em;
+}
+
+/* Version Select */
+
+.version-select::after {
+    content: "\25BE";
+    display: inline-block;
+    margin-left: -1em;
+    transform: translate(-0.625em, -0.0625em);
+    pointer-events: none;
+}
+#versionSelect {
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+    align-self: center;
+    font-family: var(--fHeading);
+    font-size: 0.9rem;
+    line-height: 1;
+    font-weight: 700;
+    padding: 0.5em 1.375em 0.5em 0.5em;
+    margin: 0 0.25em;
+    background-color: rgba(0,0,0,0.2);
+    color: inherit;
+    border: none;
+    border-radius: 0.1rem;
+}
+#versionSelect::-ms-expand {
+    display: none;
+}
+
+/* Mike Version Select */
+
+.md-version__current,
+.md-version__link {
+    font-size: 0.9rem;
+    font-weight: 700;
+    line-height: 1;
+    padding: 0.5em;
+}
+.md-version__current {
+    top: unset;
+    margin-left: 0.25em !important;
+    margin-right: 0.25em !important;
+    border-radius: 0.1rem;
+    background-color: rgba(0,0,0,0.2);
+}
+.md-version__current::after {
+    width: 0.5em;
+    height: 0.75em;
+}
+.md-version__list {
+    top: 0.1em;
+    margin: 0.25em;
+    border-radius: 0.1rem;
+}
+[dir="ltr"] .md-version__current::after {
+    margin-left: 0.4em;
+}
+[dir="rtl"] .md-version__current::after {
+    margin-right: 0.4em;
+}
+[dir="ltr"] .md-version__link {
+    padding-left: 0.5em;
+    padding-right: 1.4375em;
+}
+[dir="rtl"] .md-version__link {
+    padding-left: 1.4375em;
+    padding-right: 0.5em;
 }
 
 /* Media queries */
